# ollama-python

./: README.md  pyproject.toml
notebooks/: EDA.ipynb  teste-ollama-python.ipynb
