[tool.poetry]
name = "ollama-python"
version = "0.1.0"
description = ""
authors = ["andreacmartins <andreacmartins223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.4.7"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
